tests/compile-fail/derive_salsa_value_field_not_salsa_value.rs
struct NotSalsaValue;

#[derive(salsa::SalsaValue)]
struct Value {
    field: NotSalsaValue,
}

fn main() {}
