tests/compile-fail/derive_salsa_value_field_not_salsa_value.stderr
error[E0277]: the trait bound `NotSalsaValue: SalsaValue` is not satisfied
 --> tests/compile-fail/derive_salsa_value_field_not_salsa_value.rs:5:12
  |
5 |     field: NotSalsaValue,
  |            ^^^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `SalsaValue` is not implemented for `NotSalsaValue`
 --> tests/compile-fail/derive_salsa_value_field_not_salsa_value.rs:1:1
  |
1 | struct NotSalsaValue;
  | ^^^^^^^^^^^^^^^^^^^^
  = help: the following other types implement trait `SalsaValue`:
            &'static T
            ()
            (A, B)
            (A, B, C)
            (A, B, C, D)
            (A, B, C, D, E)
            (A, B, C, D, E, F)
            (A, B, C, D, E, F, G)
          and $N others
note: required by a bound in `assert_salsa_value`
 --> tests/compile-fail/derive_salsa_value_field_not_salsa_value.rs:3:10
  |
3 | #[derive(salsa::SalsaValue)]
  |          ^^^^^^^^^^^^^^^^^ required by this bound in `assert_salsa_value`
  = note: this error originates in the derive macro `salsa::SalsaValue` (in Nightly builds, run with -Z macro-backtrace for more info)
